fixing text cut off on input mobile

--- a/css/style.css
+++ b/css/style.css
@@ -18,14 +18,9 @@ body {
   border: none;
   border-radius: 2rem;
   border-bottom: 6px solid darkblue;
-  margin-bottom: 10px;
-  margin: 0;
   outline: none;
   font-size: 15px;
-  text-indent: 1.5px;
-  padding: 0;
-  font-size-adjust: auto;
-  padding-bottom: 2px;
+  padding: 10px 20px 12px 0;
   text-align: center;
   overflow: scroll;
 }
@@ -217,6 +212,5 @@ p {
     width: 80%;
     height: 35px;
     overflow: scroll;
-    padding: 15px 20px 15px 0;
   }
 }
